--- a/strings/langs/ar.yml
+++ b/strings/langs/ar.yml
@@ -74,7 +74,7 @@ admin_34 : "فشل الامر !."
 # Bot 
 
 # Start
-start_1 : "ها يـ؏ـُمريـہ هياتني يم الفخمين 😔🖤{0}.\n\n {1} يعمل الان ✨ .\n\n تعرف على ما يمكنني فعله من خلال الضغط على زر **الاوامر** في الاسفل أو إضبط اعدادات البوت في مجموعتك من خلال زر **الاعدادات** 🫂♥️."
+start_1 : "اعمل الان جيدا ♥.\n\n {1} يعمل الان ✨ .\n\n تعرف على ما يمكنني فعله من خلال الضغط على زر **الاوامر** في الاسفل أو إضبط اعدادات البوت في مجموعتك من خلال زر **الاعدادات** 🫂♥️."
 start_2 : "- أهلا بك عزيزي ، يمكنك أستخدامي في تشغيل الأغاني والفيديوهات داخل المجموعات والقنوات دون تقطيع 🖤."
 start_3 : "مرحبا بـ {0}\n\n لا احتاج أي  **اذونات مشرفين ** للعمل ( حتى أطلب منك ذلك ).\n\n يوزر المساعد :- @{1}\nايدي المساعد:- {2}"
 start_4 : "انضم مالك {0} [{1}] للتو إلى محادثتك."
@@ -261,13 +261,13 @@ L_B_1 : "‹ اݪذهاب لݪخاص ›"
 # Start
 S_B_1 : "⌁ اݪأوامࢪ ⌁"
 S_B_2 : "⌁ الأعدادات ⌁"
-S_B_3 : "⌁ ڪࢪوب اݪدعم ⌁"
+S_B_3 : "⌁ جروب اݪدعم ⌁"
 S_B_4 : "⌁ اݪــســوࢪس ⌁"
 S_B_5 : "⌁ أضفني اݪى مجموعتك ⌁"
 S_B_6 : "⌁ أصنع بوتك ⌁"
 S_B_7 : "⌁ اݪمطوࢪ ⌁"
 S_B_8 : "⌁ قائمة اݪأوامࢪ ⌁"
-S_B_9 : "⌁ ڪࢪوب اݪدعم ⌁"
+S_B_9 : "⌁ جروب اݪدعم ⌁"
 
 #Help 
 H_B_1 : "⭒ أوامࢪ الآدمن ⭒"
