--- a/strings/langs/ar.yml
+++ b/strings/langs/ar.yml
@@ -74,7 +74,7 @@ admin_34 : "فشل الامر !."
 # Bot 
 
 # Start
-start_1 : "ها يـ؏ـُمريـہ هياتني يم الفخمين 😔🖤{0}.\n\n {1} يعمل الان ✨ .\n\n تعرف على ما يمكنني فعله من خلال الضغط على زر **الاوامر** في الاسفل أو إضبط اعدادات البوت في مجموعتك من خلال زر **الاعدادات** 🫂♥️."
+start_1    : "اعمل بحاله جيده الان ♥. \ n \ n {1} يعمل الان ✨. \ n \ n تعرف على ما يمكن فعله من خلال الضغط على زر ** الاوامر ** في الاسفل أو إضبط اعدادات البوت في مجموعتك من خلال زر ** الاعدادات ** 🫂 ♥ ️. "
 start_2 : "**أهـݪٲ عـزِيـزِي ، أنـا بـوت أسـمـي {0}** 🎧.\n\n**وظيفتي هي تشغيݪ الأغاني ومقاطـع الفيديو في**
 
 **المڪاݪمات ، بصݪاحيات متطوࢪة ويمڪنك اݪتحڪم**
@@ -257,7 +257,7 @@ stream_4 : "📡 **بدأ البث** 💡\n\n**🏷العنوان:** [{0}]({1})\
 #General Buttons
 CLOSE_BUTTON  : "‹ أغݪاق ›"
 CLOSEMENU_BUTTON  : "‹ أغݪاق اݪقائمة ›"
-SOURCE_DRAGON : "‹ Source Dragon ›"
+SOURCE_DRAGON  : "‹ المصدر TeleGod ›"
 BACK_BUTTON : "‹ عودة ›"
 UNBAN_BUTTON : "‹ اݪغا۽ حظࢪ ›"
 
@@ -267,13 +267,13 @@ L_B_1 : "‹ اݪذهاب لݪخاص ›"
 # Start
 S_B_1 : "⌁ اݪأوامࢪ ⌁"
 S_B_2 : "⌁ الأعدادات ⌁"
-S_B_3 : "⌁ ڪࢪوب اݪدعم ⌁"
+S_B_3 : "⌁جروب اݪدعم ⌁"
 S_B_4 : "⌁ اݪــســوࢪس ⌁"
 S_B_5 : "⌁ أضفني اݪى مجموعتك ⌁"
 S_B_6 : "⌁ أصنع بوتك ⌁"
 S_B_7 : "⌁ اݪمطوࢪ ⌁"
 S_B_8 : "⌁ قائمة اݪأوامࢪ ⌁"
-S_B_9 : "⌁ ڪࢪوب اݪدعم ⌁"
+S_B_9 : "⌁ جروب اݪدعم ⌁"
 
 #Help 
 H_B_1 : "⭒ أوامࢪ الآدمن ⭒"
@@ -449,16 +449,16 @@ pbot_13 : "\n**<b>الدردشات التي لم يتم إحضارها:</b>**\n\
 
 
 #Gbanned
-gban_1 : تريد تحظر روحك ؟ الحمد لله والشكر !"
-gban_2 : "يعني هسة لازم احظر نفسي ؟ ضحكك"
-gban_3 : "كل عقلك تريد تحظرة وهو مطور ?"
+gban_1 : عاوز تحظر نفسك انت اهبل !"
+gban_2 : "يعني احظرلك نفسي ازاي طيب دلوقت 
+gban_3 : "عاوز تحظر المطور،، انت عبيط يحبيبي ?"
 gban_4 : "{0} هو بالفعل **محظور** من البوت."
 gban_5 : "**جاري اعادة ضبط المحظورين {0}**\n\nالوقت المتوقع : {1}."
 gban_6 : "**تم حظره**\n\nمحظور  **{0}** من **{1}** مجموعة ."
 gban_7 : "{0} غير محظور من البوت حتى الان ."
 gban_8 : "**يتم الان {0}**\n\nالوقت المتوقع : {1}."
 gban_9 : "**تم الغاء حظره **\n\nغير محظور **{0}** في **{1}** مجموعه."
-gban_10 : "الله وكيلك فارغه ."
+gban_10 : "قائمة الحظر فارغه ."
 gban_11 : "يرجى الانتظار قليلا.. يتم جلب القائمه"
 
 #Suggestions
